@@ -1,0 +1,51 @@
+<h1>東京8月瘋狂活動！你準備好了嗎？</h1>
+<p>東京8月瘋狂活動！你準備好了嗎？</p>
+<p></p>
+<p>8月12日至18日，東京將迎來多場精彩活動，包括傳統舞蹈、音樂節、煙花表演等。讓我們一起來看看這些活動吧！</p>
+<p></p>
+<p>**傳統舞蹈**</p>
+<p></p>
+<p>* 歌舞伎町盆踊（Shinjuku Kabukichō Bon Dance）：在東京最非傳統的地區之一，體驗傳統日本節日盆踊。即使你不知道如何跳舞，也不用擔心，現場會有老師教導大家。</p>
+<p>* 箱根大文字焼き（Hakone Daimonji-yaki）：在箱根的妙法岳山上，205根竹子將被點燃，形成一個巨大的燃燒的"大"字。同時還會有煙花表演和盆踊舞蹈活動。</p>
+<p></p>
+<p>**音樂節**</p>
+<p></p>
+<p>* 音速狂熱（Sonicmania）：這是夏日音速音樂節的暖場派對，將在同一地點的幕張展覽館舉行。表演嘉賓包括Major Lazer、Underworld、鳳凰樂團、妮亞·阿奇瓦斯、阿卡、魚韻等。</p>
+<p>* 夏日音速音樂節（Summer Sonic）：雖然大部分門票已經售罄，但仍有一些單日門票可供購買。</p>
+<p></p>
+<p>**其他活動**</p>
+<p></p>
+<p>* 泰國博覽會（Thai Expo）：在代代木公園舉行的泰國節日，體驗泰國文化、美食和服務。</p>
+<p>* NAKED“Omatsuri”節日：藝術團體NAKED帶來一個互動的祭典，使用投影映射和AI技術，讓參觀者體驗一個前所未有的祭典。</p>
+<p>* 下北澤阿波踊節（Shimokitazawa Awa Odori Festival）：下北澤的第一商店街將舉行阿波踊節，參與者將穿著傳統服裝，唱歌、跳舞和遊行。</p>
+<p>* 江の島夏の花火大会（Enoshima Summer Fireworks Festival）：在江之島舉行的煙花表演。</p>
+<p>* 座間向日葵花祭（Zama Sunflower Festival）：在座間町舉行的向日葵花節。</p>
+<p><h1>東京8月瘋狂活動！你準備好了嗎？</h1></p>
+<p></p>
+<p><p>如果你正在尋找一個能夠震撼整場表演的drag show，那麼《新鲜肉》（Fresh Meat）就是你的首選。表演者們嘗試著實驗、獨特和前衛的風格，為觀眾帶來了一個令人驚艷的夜晚。演員們來自不同的背景，有經驗豐富的老手，也有初出茅廬的新人。</p></p>
+<p></p>
+<p><p>預售票價：¥2,500</p></p>
+<p></p>
+<p><h2>江の島夏の花火大会（Enoshima Summer Fireworks Festival）</h2></p>
+<p></p>
+<p><p>在江の島舉辦的邁阿密海灘夏日煙花秀（Miami Beach Show Summer Fireworks）中，你可以欣賞到一場短暫的煙花表演。如果你已經在東京附近的江の島遊玩，這將是一個額外的獎勵。這場5分鐘的煙花表演將在8月和7月的5天內舉行。</p></p>
+<p></p>
+<p><h2>座間向日葵花祭（Zama Sunflower Festival）</h2></p>
+<p></p>
+<p><p>在座間向日葵花祭上，你可以欣賞到550,000株明亮的向日葵。這是東京最著名的向日葵花祭之一。別忘了在特別的觀景台和拍照區拍下美麗的照片。</p></p>
+<p></p>
+<p><h2>港未來盆踊祭（Minato Mirai Bon Dance Festival）</h2></p>
+<p></p>
+<p><p>在橫濱港未來的臨港公園（Rinko Park），你可以加入穿著浴衣的人群，參加一年一度的盆踊傳統活動。如果你跳累了，也可以在許多攤位和美麗的橫濱灣大橋燈光下休息。</p></p>
+<p></p>
+<p><h2>下北澤夜市（Shimokitazawa Night Flea Market）</h2></p>
+<p></p>
+<p><p>在下北澤的夜市上，你可以找到你的下一個隱藏的寶藏。這個時尚的市場上有手工藝品、舊衣服、珠寶和其他物品。</p></p>
+<p></p>
+<p><h2>夏日音速音樂節（Summer Sonic）</h2></p>
+<p></p>
+<p><p>夏日音速音樂節的巨大舞台設置在東京灣的美麗景色下，吸引了各種音樂風格的樂迷。音樂節在東京（千葉）和大阪同時舉行，演出者會在兩地輪流演出，所以你不會錯過任何精彩的表演。</p></p>
+<p></p>
+<p><h2>東京江戶川競艇場（Tokyo Boat Race at Edogawa Stadium）</h2></p>
+<p></p>
+<p><p>在東京江戶川競艇場，你可以欣賞到刺激的划船比賽。六艘划船在600米的賽道上進行三圈的比賽，爭奪冠軍。划船的顏色和號碼從1到6，如果他們太快或太慢，就會被淘汰（投注在這些船上的錢將被退回）。最後，誰先到終點，誰就是贏家。</p></p>
