@@ -8,3 +8,4 @@ https://tokyocheapo.com/editorial/biggest-fears-japan/
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-disaster-prevention-and-last-chance-exhibitions/
 https://tokyocheapo.com/entertainment/tokyo-events-september/
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-koenji-awa-odori-roppongi-bon-odori-and-fireworks/
+https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-sunflowers-hakone-festival-and-bon-odori/
